new knopka + widget

--- a/index.html
+++ b/index.html
@@ -55,14 +55,11 @@
   </div>
 
   <div class="container">
-    <embed src="resource/AUDIO.mp3" width="70" height="45" align="left" hidden="False" autostart="False" loop="False">
 
       <div id="preloader"></div>
       <div id="baltika"></div>
-
-     
-      
-        <button onclick="OnButtonClick()">Catalog dostupnih directoriy</button>
+ 
+        <button onclick="OnButtonClick()"> Каталог директорий</button>
         <div id="hidden-menu">
         <a href="http://35.237.80.4/rss/index.html">
           <img src="resource/r3s.png" alt="rss">
