--- a/index.html
+++ b/index.html
@@ -8,80 +8,59 @@
   <title>Dom</title>
 
 
-
 </head>
 
 <body>
-<rssapp-ticker id="H8ZToKJSXiCsJEI5"></rssapp-ticker><script src="https://widget.rss.app/v1/ticker.js" type="text/javascript" async></script>
+  <rssapp-ticker id="H8ZToKJSXiCsJEI5"></rssapp-ticker>
 
-<script>
-  (function(d, s, id) {
-      if (d.getElementById(id)) {
-          if (window.__TOMORROW__) {
-              window.__TOMORROW__.renderWidget();
-          }
-          return;
-      }
-      const fjs = d.getElementsByTagName(s)[0];
-      const js = d.createElement(s);
-      js.id = id;
-      js.src = "https://www.tomorrow.io/v1/widget/sdk/sdk.bundle.min.js";
+  <div>
 
-      fjs.parentNode.insertBefore(js, fjs);
-  })(document, 'script', 'tomorrow-sdk');
-  </script>
+    <div id="preloader"></div>
+    <div id="baltika"></div>
+    <div id="bochka">Каталог директорий</div>
+    <button class="but" onclick="OnButtonClick()"> Каталог директорий</button>
 
-  <div class="tomorrow"
-     data-location-id=""
-     data-language="RU"
-     data-unit-system="METRIC"
-     data-skin="light"
-     data-widget-type="upcoming"
-     style="padding-bottom:22px;position:relative;"
-  >
-    <a
-      href="https://www.tomorrow.io/weather-api/"
-      rel="nofollow noopener noreferrer"
-      target="_blank"
-      style="position: absolute; bottom: 0; transform: translateX(-50%); left: 50%;"
-    >
-      <img
-        alt="Powered by the Tomorrow.io Weather API"
-        src="https://weather-website-client.tomorrow.io/img/powered-by.svg"
-        width="250"
-        height="18"
-      />
-    </a>
-  </div>
-
-  <div class="container">
-
-      <div id="preloader"></div>
-      <div id="baltika"></div>
- 
-        <button onclick="OnButtonClick()"> Каталог директорий</button>
-        <div id="hidden-menu">
-        <a href="http://35.237.80.4/rss/index.html">
-          <img src="resource/r3s.png" alt="rss">
+    <div id="hidden-menu">
+      <div class="tomorrow" data-location-id="" data-language="RU" data-unit-system="METRIC" data-skin="light"
+        data-widget-type="upcoming" style="padding-bottom:22px;position:relative;">
+        <a href="https://www.tomorrow.io/weather-api/" rel="nofollow noopener noreferrer" target="_blank"
+          style="position: absolute; bottom: 0; transform: translateX(-50%); left: 50%;">
+          <img alt="Powered by the Tomorrow.io Weather API"
+            src="https://weather-website-client.tomorrow.io/img/powered-by.svg" width="250" height="18" />
         </a>
-        <a href="http://35.237.80.4/nextcloud/">
-          <img src="resource/nextcloudlogo.png" alt="Failoviy server">
-        </a>
-        <a href="http://35.237.80.4/zabbix">
-          <img src="resource/zabbix.png" alt="Monitoring resursov servera">
-        </a>
+      </div>
+      <a href="http://35.237.80.4/rss/index.html">
+        <img src="resource/r3s.png" alt="rss">
+      </a>
+      <a href="http://35.237.80.4/nextcloud/">
+        <img src="resource/nextcloudlogo.png" alt="Failoviy server">
+      </a>
+      <a href="http://35.237.80.4/zabbix">
+        <img src="resource/zabbix.png" alt="Monitoring resursov servera">
+      </a>
 
     </div>
-   
 
-
-
-
-
-
-
-    <script src="js/animated.js"></script>
-    <script src="js/preloader.js"></script>
 </body>
+<script src="js/animated.js"></script>
+<script src="js/preloader.js"></script>
+<script src="https://widget.rss.app/v1/ticker.js" type="text/javascript" async></script>
+
+<script>
+  (function (d, s, id) {
+    if (d.getElementById(id)) {
+      if (window.__TOMORROW__) {
+        window.__TOMORROW__.renderWidget();
+      }
+      return;
+    }
+    const fjs = d.getElementsByTagName(s)[0];
+    const js = d.createElement(s);
+    js.id = id;
+    js.src = "https://www.tomorrow.io/v1/widget/sdk/sdk.bundle.min.js";
+
+    fjs.parentNode.insertBefore(js, fjs);
+  })(document, 'script', 'tomorrow-sdk');
+</script>
 
 </html>
