--- a/index.html
+++ b/index.html
@@ -17,18 +17,22 @@
 
     <div id="preloader"></div>
     <div id="baltika"></div>
-    <div id="bochka">Каталог директорий</div>
+
+
+    <div id="bochka" class="planet"></div>
+    
+
     <button class="but" onclick="OnButtonClick()"> Каталог директорий</button>
 
     <div id="hidden-menu">
-      <div class="tomorrow" data-location-id="" data-language="RU" data-unit-system="METRIC" data-skin="light"
+      <!--<div class="tomorrow" data-location-id="" data-language="RU" data-unit-system="METRIC" data-skin="light"
         data-widget-type="upcoming" style="padding-bottom:22px;position:relative;">
         <a href="https://www.tomorrow.io/weather-api/" rel="nofollow noopener noreferrer" target="_blank"
           style="position: absolute; bottom: 0; transform: translateX(-50%); left: 50%;">
           <img alt="Powered by the Tomorrow.io Weather API"
             src="https://weather-website-client.tomorrow.io/img/powered-by.svg" width="250" height="18" />
         </a>
-      </div>
+      </div>-->
       <a href="http://35.237.80.4/rss/index.html">
         <img src="resource/r3s.png" alt="rss">
       </a>
@@ -38,7 +42,15 @@
       <a href="http://35.237.80.4/zabbix">
         <img src="resource/zabbix.png" alt="Monitoring resursov servera">
       </a>
+      <div class="planet">
 
+      </div>
+      <div class="planet">
+
+      </div>
+      <div class="planet">
+        
+      </div>
     </div>
 
 </body>
