--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
   <rssapp-ticker id="H8ZToKJSXiCsJEI5"></rssapp-ticker>
 
   <div>
-
+    <img src="resource/qr-code.png">
     <div id="preloader"></div>
     <div id="baltika"></div>
 
 
+    <div class="mouse-parallax">
+      <div class="mouse-parallax-bg"></div>
+  </div>
+
     <div id="bochka" class="planet"></div>
     
 
+ 
     <button class="but" onclick="OnButtonClick()"> Каталог директорий</button>
 
     <div id="hidden-menu">
@@ -33,7 +38,7 @@
             src="https://weather-website-client.tomorrow.io/img/powered-by.svg" width="250" height="18" />
         </a>
       </div>-->
-      <a href="http://35.237.80.4/rss/index.html">
+     <!---- <a href="http://35.237.80.4/rss/index.html">
         <img src="resource/r3s.png" alt="rss">
       </a>
       <a href="http://35.237.80.4/nextcloud/">
@@ -41,9 +46,10 @@
       </a>
       <a href="http://35.237.80.4/zabbix">
         <img src="resource/zabbix.png" alt="Monitoring resursov servera">
-      </a>
-      <div class="planet">
+      </a></!-->
 
+      <div class="planet">
+        
       </div>
       <div class="planet">
 
